# ztop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
configuration/: base.yaml  production.yaml
migrations/: 20220407230124_make_status_not_null_in_subscriptions.sql  20220407230500_create_subscription_tokens_table.sql
src/: configuration.rs  configuration.yaml  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
