[package]
name = "ztop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztop"


[dependencies]
actix-web = "4.0.1"
config = "0.12.0"
reqwest = "0.11.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"

[dependencies.sqlx]
version = "0.5.11" 
default-features = false 
features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
